--- a/app/src/main/res/layout/activity_ops_item_right_no.xml
+++ b/app/src/main/res/layout/activity_ops_item_right_no.xml
@@ -12,7 +12,7 @@
         android:background="@drawable/btn_date_dwmy_normal"
         android:layout_height="@dimen/x140">
       <ImageView
-          android:src="@mipmap/ic_launcher"
+          android:src="@mipmap/ic_right"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           />
