--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -3,72 +3,130 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/toobar_bg"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
    <include
        layout="@layout/toobar"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/y180"
         android:background="@color/white"
         android:orientation="vertical"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp">
-        <RelativeLayout
+        android:paddingLeft="@dimen/y15"
+        android:paddingRight="@dimen/y50">
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_marginTop="80dp">
+            android:layout_height="@dimen/y36"
+            android:layout_marginTop="@dimen/y20">
             <TextView
-                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
                 android:id="@+id/identity_pass_oldpwdtv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:text="旧密码"
-                android:textColor="@color/main" />
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="原密码"
+                android:textColor="@color/black" />
 
             <EditText
+                android:background="@null"
                 android:id="@+id/identity_pass_oldpwd"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
                 android:layout_toRightOf="@+id/identity_pass_oldpwdtv"
                 android:inputType="textPassword" />
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
+            android:gravity="center"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_marginTop="20dp">
-
+            android:layout_height="@dimen/y36"
+            android:layout_marginTop="@dimen/y20">
             <TextView
-                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
                 android:id="@+id/identity_pass_newpwdtv"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text="新密码"
-                android:textColor="@color/main" />
+                android:text="设置新密码"
+                android:textColor="@color/black" />
 
             <EditText
+                android:background="@null"
                 android:id="@+id/identity_pass_newpwd"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
                 android:layout_toRightOf="@+id/identity_pass_newpwdtv"
                 android:inputType="textPassword" />
-
-
-        </RelativeLayout>
-
-        <Button
-            android:id="@+id/identity_pass_confirm"
+        </LinearLayout>
+        <LinearLayout
+            android:gravity="center"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="49dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/selector_btn_confirm_click"
-            android:text="修改密码"
-            android:textColor="@color/white" />
+            android:layout_height="@dimen/y36"
+            android:layout_marginTop="@dimen/y20">
+            <TextView
+                android:gravity="center_vertical"
+                android:id="@+id/identity_pass_newpwdtv2"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="match_parent"
+                android:singleLine="true"
+                android:text="重复新密码"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:background="@null"
+                android:id="@+id/identity_pass_newpwd2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:layout_toRightOf="@+id/identity_pass_newpwdtv2"
+                android:inputType="textPassword" />
+        </LinearLayout>
+    </LinearLayout>
+    <Button
+        android:layout_gravity="center"
+        android:id="@+id/identity_pass_confirm"
+        android:layout_width="@dimen/y200"
+        android:layout_height="@dimen/y49"
+        android:layout_marginTop="@dimen/y20"
+        android:background="@drawable/versetion_text_shop_select"
+        android:text="修改密码"
+        android:textColor="@color/white" />
+    <LinearLayout
+        android:layout_marginTop="@dimen/y20"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_gravity="center"
+            android:layout_width="@dimen/y250"
+            android:layout_height="wrap_content"
+            android:text="您正在进行修改密码操作，如遇账户问题请联系天天智电客户服务热线"/>
+        <LinearLayout
+            android:layout_marginTop="@dimen/y10"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/login_phone"/>
+            <TextView
+                android:layout_marginLeft="@dimen/y10"
+                android:id="@+id/identity_pass_call"
+                android:textSize="17sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="400 668 2879"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
