--- a/app/src/main/res/layout/dialog_schedule.xml
+++ b/app/src/main/res/layout/dialog_schedule.xml
@@ -1,13 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="#11ffffff">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginLeft="@dimen/y8"
+    android:layout_marginRight="@dimen/y8"
+    android:background="@drawable/btn_date_dwmy_normal"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/y220">
+        <LinearLayout
+            android:layout_marginTop="@dimen/y10"
+            android:layout_marginLeft="@dimen/y10"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y40">
+              <TextView
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="回复"/>
+                <TextView
+                    android:id="@+id/question_dialog_name"
+                    android:layout_marginLeft="@dimen/y8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="都城均"/>
+        </LinearLayout>
         <EditText
             android:id="@+id/message"
             android:layout_width="match_parent"
+            android:layout_height="@dimen/y80"
+            android:background="@drawable/bg_edittext_gray"
+            android:layout_marginLeft="@dimen/y10"
+            android:layout_marginRight="@dimen/y10"
+            android:gravity="left|top"
+            android:textColor="@color/black"
+            android:inputType="textMultiLine"
+            android:minLines="6" />
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_date_dwmy_normal"
-            android:layout_marginLeft="@dimen/y20"
-            android:layout_marginRight="@dimen/y20" />
-</RelativeLayout>
+            android:layout_marginTop="@dimen/y20">
+                <LinearLayout
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+                        <Button
+                            android:id="@+id/question_btn_confirm"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/y40"
+                            android:background="@drawable/versetion_text_shop_select"
+                            android:text="回复"
+                            android:textColor="@color/white" />
+                </LinearLayout>
+                <LinearLayout
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+                        <Button
+                            android:id="@+id/question_btn_cancel"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/y40"
+                            android:background="@drawable/versetion_text_shop"
+                            android:text="取消"
+                            android:textColor="@color/white" />
+                </LinearLayout>
+        </LinearLayout>
+</LinearLayout>
