--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -42,13 +42,13 @@
                         android:layout_alignParentRight="true"
                         android:text="3月"
                        />
-                    <tties.cn.energy.chart.LineDataChart
+                    <tties.cn.energy.chart.BarDataChart
                         android:id="@+id/datafragment_chart"
                         android:layout_below="@+id/datafragment_time_tv"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/y130"
-                        android:background="#FF6130">
-                    </tties.cn.energy.chart.LineDataChart>
+                        android:background="#FF602F">
+                    </tties.cn.energy.chart.BarDataChart>
                     <LinearLayout
                         android:layout_below="@+id/datafragment_chart"
                         android:orientation="horizontal"
