--- a/app/src/main/res/drawable/btn_date_dwmy_norma_colorl.xml
+++ b/app/src/main/res/drawable/btn_date_dwmy_norma_colorl.xml
@@ -12,8 +12,8 @@
         android:right="2dp"
         android:top="2dp"
         />
-    <solid android:color="@color/orangered" />
+    <solid android:color="#FF602F" />
     <stroke
         android:width="1dp"
-        android:color="@color/orangered" />
+        android:color="#FF602F" />
 </shape>
