--- a/app/src/main/res/drawable/selector_radiobtn_ops_imgone.xml
+++ b/app/src/main/res/drawable/selector_radiobtn_ops_imgone.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@mipmap/ops_all" android:state_selected="true" />
     <item android:drawable="@mipmap/ops_all" android:state_checked="true" />
-    <item android:drawable="@mipmap/ops_all" />
+    <item android:drawable="@mipmap/ops_all_unselect" />
 </selector>
