--- a/app/src/main/res/drawable/selector_radiobtn_ops_imgsix.xml
+++ b/app/src/main/res/drawable/selector_radiobtn_ops_imgsix.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/ops_environment" android:state_selected="true" />
-    <item android:drawable="@mipmap/ops_environment" android:state_checked="true" />
+    <item android:drawable="@mipmap/ops_environment_select" android:state_selected="true" />
+    <item android:drawable="@mipmap/ops_environment_select" android:state_checked="true" />
     <item android:drawable="@mipmap/ops_environment" />
 </selector>
