--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -378,6 +378,7 @@
                         android:gravity="center"
                         android:layout_weight="1">
                          <TextView
+                             android:id="@+id/data_electricity_tv"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center_vertical"
