--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -200,8 +200,8 @@
             app:tabSelectedTextColor="@color/statment_layout_title_h_line">
         </android.support.design.widget.TabLayout>
         <android.support.v4.view.ViewPager
-            android:layout_marginRight="@dimen/x8"
-            android:layout_marginLeft="@dimen/x8"
+            android:paddingLeft="@dimen/x8"
+            android:paddingRight="@dimen/x8"
             android:id="@+id/qu_vp"
             android:layout_below="@id/qu_tab"
             android:layout_above="@+id/qu_bt_ll"
