--- a/app/src/main/res/layout/item_dialog_style.xml
+++ b/app/src/main/res/layout/item_dialog_style.xml
@@ -2,16 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:gravity="center"
+    android:background="@color/white"
+    android:orientation="horizontal"
     android:layout_height="wrap_content"
     android:padding="@dimen/y5" >
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="0dp"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="@dimen/y8"
+        android:layout_height="@dimen/y70"
+        android:layout_weight="3">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="电表号"/>
+        <TextView
+            android:id="@+id/table_electrical_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="条目"
+            android:textColor="#000"
+            android:textSize="18sp" />
+    </LinearLayout>
+    <LinearLayout
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/y80"
+        android:layout_weight="1">
+        <CheckBox
+            android:id="@+id/table_electrical_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/CustomCheckBoxTheme"
+           />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_item_dialog_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="条目"
-        android:textColor="#000"
-        android:textSize="18sp" />
 
 </LinearLayout>
