--- a/app/src/main/res/layout/activity_data__electric.xml
+++ b/app/src/main/res/layout/activity_data__electric.xml
@@ -135,7 +135,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
-                    android:text="2018年2月"/>
+                    android:text=""/>
                 <ImageView
                     android:src="@mipmap/arrows"
                     android:layout_marginLeft="@dimen/y8"
@@ -154,11 +154,12 @@
                 android:gravity="center"
                 android:layout_weight="1">
                 <TextView
+                    android:id="@+id/data_electrical_time_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/white"
-                    android:text="总电量"/>
+                    android:text=""/>
                 <ImageView
                     android:src="@mipmap/arrows"
                     android:layout_marginLeft="@dimen/y8"
