--- a/app/src/main/res/layout/activity_data__no.xml
+++ b/app/src/main/res/layout/activity_data__no.xml
@@ -105,7 +105,7 @@
                 android:gravity="center"
                 android:layout_weight="1">
                 <TextView
-                    android:id="@+id/data_no_allelectric_tv"
+                    android:id="@+id/data_no_ele_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
