--- a/app/src/main/res/layout/activity_energy__baseenergy.xml
+++ b/app/src/main/res/layout/activity_energy__baseenergy.xml
@@ -160,6 +160,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1">
                 <TextView
+                    android:id="@+id/energy_base_year"
                     android:textColor="@color/black"
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
